--- a/index-dark.html
+++ b/index-dark.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Nand Patel</title>
+	<title>Nand-Patel</title>
 	<meta name="description" content="Nand Patel - Portfolio/CV/Resume">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="images/4.png" style="border-radius: 100%;">
