--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		</div>
 		<!-- logo image -->
 		<div class="site-logo">
-			<a href="nandpatel.html">
+			<a href="index.html">
 				<h1 class="mb-2 mt-1">Nand Patel</h1>
 			<!-- <img src="images/logo.svg" alt="Nand" /> -->
 			</a>
@@ -85,7 +85,7 @@
 	
 	<!-- logo image -->
 	<div class="site-logo">
-		<a href="nandpatel.html">
+		<a href="index.html">
 			<h1 class="mb-2 mt-0">Nand Patel</h1>
 			<!-- <img src="images/logo.svg" alt="Nand" /> -->
 		</a>
