--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Nand-Patel</title>
 	<meta name="description" content="Nand Patel - Portfolio/CV/Resume">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="shortcut icon" type="image/x-icon" href="images/4.png" style="border-radius: 100%;">
+	<link rel="shortcut icon" type="image/x-icon" href="images/Icon.jpg" style="border-radius: 100%;">
 
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
