--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 		<div class="container">
 			
 			<!-- section title -->
-			<h2 class="section-title wow fadeInUp">Services</h2>
+			<h2 class="section-title wow fadeInUp">Skills</h2>
 
 			<div class="spacer" data-height="60"></div>
 			
