--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<ul class="vertical-menu scrollspy">
 			<li class="active"><a href="#home"><i class="icon-home"></i>Home</a></li>
 			<li><a href="#about"><i class="icon-user-following"></i>About</a></li>
-			<li><a href="#services"><i class="icon-briefcase"></i>Services</a></li>
+			<li><a href="#services"><i class="icon-fire"></i>Skills</a></li>
 			<li><a href="#experience"><i class="icon-graduation"></i>Experience</a></li>
 			<li><a href="#works"><i class="icon-layers"></i>Works</a></li>
 			<!-- <li><a href="#blog"><i class="icon-note"></i>Blog</a></li> -->
