--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 
 				<!-- portfolio item -->
 				<div class="col-md-4 col-sm-6 grid-item project">
-					<a href="https://hashmedia.netlify.app/" target="_blank">
+					<a href="https://hashmedia.in/" target="_blank">
 						<div class="portfolio-item rounded shadow-dark">
 							<div class="details">
 								<span class="term">Projects</span>
