--- a/index.html
+++ b/index.html
@@ -27,39 +27,7 @@
 <body class="dark">
 
 <!-- Preloader -->
-<div id="preloader">
-	<div class="outer">
-		<!-- Google Chrome -->
-		<div class="infinityChrome">
-			<div></div>
-			<div></div>
-			<div></div>
-		</div>
 
-		<!-- Safari and others -->
-		<div class="infinity">
-			<div>
-				<span></span>
-			</div>
-			<div>
-				<span></span>
-			</div>
-			<div>
-				<span></span>
-			</div>
-		</div>
-		<!-- Stuff -->
-		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="goo-outer">
-			<defs>
-				<filter id="goo">
-					<feGaussianBlur in="SourceGraphic" stdDeviation="6" result="blur" />
-					<feColorMatrix in="blur" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-					<feBlend in="SourceGraphic" in2="goo" />
-				</filter>
-			</defs>
-		</svg>
-	</div>
-</div>
 
 <!-- mobile header -->
 <header class="mobile-header-1">
@@ -393,6 +361,15 @@
 								<span class="time">2019 - Present</span>
 								<h3 class="title">Bachelor’s Degree</h3>
 								<p>Pursuing Graduation of Information Technology, <br>Parul University.</p>
+							</div>
+						</div>
+
+						<!-- timeline item -->
+						<div class="timeline-container wow fadeInUp" data-wow-delay="0.2s">
+							<div class="content">
+								<span class="time">2021 - Present</span>
+								<h3 class="title">Researcher</h3>
+								<p>Super-Computing Cell, Parul University</p>
 							</div>
 						</div>
 
