--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
+
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Nand-Patel</title>
@@ -368,6 +369,15 @@
 						<div class="timeline-container wow fadeInUp" data-wow-delay="0.2s">
 							<div class="content">
 								<span class="time">2021 - Present</span>
+								<h3 class="title">Google Developer Student Club</h3>
+								<p>Lead at GDSC, Parul University</p>
+							</div>
+						</div>
+
+						<!-- timeline item -->
+						<div class="timeline-container wow fadeInUp" data-wow-delay="0.2s">
+							<div class="content">
+								<span class="time">2021 - Present</span>
 								<h3 class="title">Researcher</h3>
 								<p>Super-Computing Cell, Parul University</p>
 							</div>
@@ -395,8 +405,8 @@
 						<div class="timeline-container wow fadeInUp" data-wow-delay="0.4s">
 							<div class="content">
 								<span class="time">2020-2021</span>
-								<h3 class="title">Google Developer Student Club</h3>
-								<p>Managment Lead at Google DSC PU,<br>Parul University</p>
+								<h3 class="title">Google Developer Student Clubs</h3>
+								<p>Managment Lead at GDSC,<br>Parul University</p>
 							</div>
 						</div>
 
@@ -414,6 +424,16 @@
 
 					<!-- timeline wrapper -->
 					<div class="timeline edu bg-dark rounded shadow-light padding-30 overflow-hidden">
+
+						<!-- timeline item -->
+						<div class="timeline-container wow fadeInUp">
+							<div class="content">
+								<span class="time">2020</span>
+								<h3 class="title">Summer School Program at Poland</h3>
+								<p>Wrocław University of Science and Technology, Poland
+								</p>
+							</div>
+						</div>
 
 						<!-- timeline item -->
 						<div class="timeline-container wow fadeInUp">
@@ -526,6 +546,23 @@
 						<a href="images/team/SSIP.jpg"></a>
 					</div>
 				</div>
+				
+				<!-- portfolio item -->
+<div class="col-md-4 col-sm-6 grid-item video">
+	<a href="https://www.youtube.com/watch?v=WeIMYhLPmsc" class="work-video">
+		<div class="portfolio-item rounded shadow-dark">
+			<div class="details">
+				<span class="term">Videos</span>
+				<h4 class="title">Summer School Program, Poland</h4>
+				<span class="more-button"><i class="icon-camrecorder"></i></span>
+			</div>
+			<div class="thumb">
+				<img src="images/team/Poland.png" alt="Portfolio-title" />
+				<div class="mask"></div>
+			</div>
+		</div>
+	</a>
+</div>
 
 				<!-- portfolio item -->
 				<div class="col-md-4 col-sm-6 grid-item project">
