--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
 						<div class="timeline-container wow fadeInUp">
 							<div class="content">
 								<span class="time">2019 - Present</span>
-								<h3 class="title">Bachelor’s Degree</h3>
-								<p>Pursuing Graduation of Information Technology, <br>Parul University.</p>
+								<h3 class="title">Bachelor’s Degree🥇(Gold Medalist)</h3>
+								<p> Information Technology, Parul University.</p>
 							</div>
 						</div>
 
@@ -478,6 +478,15 @@
 								<span class="time">2020-2021</span>
 								<h3 class="title">Event Co-Ordinator, Projections</h3>
 								<p>2020 & 2021</p>
+							</div>
+						</div>
+
+						<div class="timeline-container wow fadeInUp">
+							<div class="content">
+								<span class="time">2022</span>
+								<h3 class="title">Summer School Program at Russia</h3>
+								<p>ITMO University, Russia
+								</p>
 							</div>
 						</div>
 
